[package]
name = "ipod_sun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse = { path = "./parse"}
#keystone-engine = { version = "0.1.0", features = ["build-from-src"] }
capstone = "0.11.0"
anyhow = "1.0.75"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
clap = { version = "4.4.11", features = ["derive"] }
isahc = "1.7.2"
zip = "0.6.6"