[package]
name = "test_payload_in_osos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicorn-engine = { version = "2.0.1", features = ["dynamic_linkage"]}
goblin = "0.7.1"
rand = "0.8.5"
md5 = "0.7.0"
serde_json = "1.0.108"
